test/mutation_analysis/s0008_string_to_integer_atoi/hafis/ablation_o3_full/mutants/47/result.txt
./test/mutation_analysis/s0008_string_to_integer_atoi/hafis/ablation_o3_full/mutants/47/Solution.java:33: error: unreachable statement
        while (false) {
                      ^
1 error
